--- a/public/form.html
+++ b/public/form.html
@@ -18,14 +18,7 @@
         <script>
         
             // get csrf token 
-            var xhttp = new XMLHttpRequest();
-            xhttp.onreadystatechange = function() {
-                if(this.readyState === 4 && this.status === 200){
-                    $('#csrf').val(JSON.parse(this.responseText).token);
-                }
-            }
-            xhttp.open('GET', '/token', true);
-            xhttp.send();
+            $('#csrf').val(JSON.parse(document.cookie).csrf-token);
 
             function logout() {
                 var xhttp = new XMLHttpRequest();
