--- a/public/form.html
+++ b/public/form.html
@@ -18,7 +18,23 @@
         <script>
         
             // get csrf token 
-            $('#csrf').val(JSON.parse(document.cookie).csrf-token);
+            $('#csrf').val(getCookie('csrf-token'));
+
+            function getCookie(cname) {
+                var name = cname + "=";
+                var decodedCookie = decodeURIComponent(document.cookie);
+                var ca = decodedCookie.split(';');
+                for(var i = 0; i <ca.length; i++) {
+                    var c = ca[i];
+                    while (c.charAt(0) == ' ') {
+                        c = c.substring(1);
+                    }
+                    if (c.indexOf(name) == 0) {
+                        return c.substring(name.length, c.length);
+                    }
+                }
+                return "";
+            }
 
             function logout() {
                 var xhttp = new XMLHttpRequest();
